Fixed interceptor error issues

--- a/api/.env
+++ b/api/.env
@@ -1,3 +1,5 @@
 APIUSERSURL="http://localhost:3001/users"
 NODE_ENV="development"
 CLIENT_URL="http://localhost:5173"
+accessTokenExpiresIn="1m"
+refreshTokenExpiresIn="7d"
